# use-rust-in-c

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt
cli/src/: main.c
lib/: CMakeLists.txt  Cargo.toml  build.rs
lib/src/: lib.rs
